# HZ-20260518

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  Makefile  config.example.json  docker-compose.yml  pyproject.toml  setup.py  start_dev.bat  test_nanobot_provider.py  test_zhipu_api.py  菊江变2号主变保护更换安全措施票_审查意见.docx
docs/: image-release-package.md  录波解析功能实现原理.md
openspec/: config.yaml
scripts/: build-image-release.bat  build-image-release.sh  copy_briefing_to_workspace.py  docker-entrypoint.sh  generate_icons.py  tee_rotate_logs.py  test_setting_download.py
skills/setting-parser/: SKILL.md  pyproject.toml
skills/setting-parser/setting_parser/: __init__.py  cli.py  models.py  output_schema.py
skills/setting-parser/setting_parser/extractors/: __init__.py  base.py  excel.py  ocr.py  pdf.py
skills/setting-parser/setting_parser/knowledge/: __init__.py  reader.py  router.py
skills/setting-parser/setting_parser/llm/: __init__.py  client.py  describers.py  extractor.py  schemas.py
skills/setting-parser/setting_parser/llm/prompts/: describe_item.j2  parse_setting_sheet.j2  summarize_stats.j2
skills/setting-parser/setting_parser/stats/: __init__.py  anomaly.py  descriptive.py
skills/setting-parser/setting_parser/subcommands/: __init__.py  describe.py  kb.py  parse.py  stats_cmd.py
tests/: test_agentplayground_routes.py  test_base_path_support.py  test_build_image_release.py  test_document_parser_skill.py  test_file_downloads.py  test_g_file_compare_jobs.py  test_local_nginx_config.py  test_network_patch.py  test_prompt_patch_signature.py  (+4 more)
web/: index.html  (+4 more)
(+379 files in other folders)
